errors.log
Fetching repository, done.

-----> Ruby app detected
-----> Compiling Ruby/Rails
-----> Using Ruby version: ruby-2.0.0
-----> Installing dependencies using 1.5.2
       Running: bundle install --without development:test --path vendor/bundle --binstubs vendor/bundle/bin -j4 --deployment
       Using i18n (0.6.9)
       Using rake (10.3.1)
       Using multi_json (1.9.2)
       Using minitest (4.7.5)
       Using thread_safe (0.3.3)
       Using tzinfo (0.3.39)
       Using builder (3.1.4)
       Using erubis (2.7.0)
       Using rack (1.5.2)
       Using mime-types (1.25.1)
       Using polyglot (0.3.4)
       Using arel (4.0.2)
       Using activerecord-deprecated_finders (1.0.3)
       Using coffee-script-source (1.7.0)
       Using thor (0.19.1)
       Using execjs (2.0.2)
       Using hike (1.2.3)
       Using excon (0.33.0)
       Using bundler (1.5.2)
       Using pg (0.17.1)
       Using tilt (1.4.1)
       Using json (1.8.1)
       Using rails_stdout_logging (0.0.3)
       Using sass (3.2.19)
       Using rack-test (0.6.2)
       Using rails_serve_static_assets (0.0.2)
       Using activesupport (4.0.2)
       Using coffee-script (2.2.0)
       Using treetop (1.4.15)
       Using sprockets (2.11.0)
       Using mandrill-api (1.0.51)
       Using rails_12factor (0.0.2)
       Using uglifier (2.5.0)
       Using rdoc (4.1.1)
       Using actionpack (4.0.2)
       Using activemodel (4.0.2)
       Using jbuilder (1.5.3)
       Using sdoc (0.4.0)
       Using railties (4.0.2)
       Using mail (2.5.4)
       Using sprockets-rails (2.0.1)
       Using activerecord (4.0.2)
       Using actionmailer (4.0.2)
       Using coffee-rails (4.0.1)
       Using sass-rails (4.0.3)
       Using rails (4.0.2)
       Using jquery-rails (3.1.0)
       Using turbolinks (2.2.2)
       Your bundle is complete!
       Gems in the groups development and test were not installed.
       It was installed into ./vendor/bundle
       Bundle completed (0.89s)
       Cleaning up the bundler cache.
-----> Writing config/database.yml to read from DATABASE_URL
-----> Preparing app for Rails asset pipeline
       Running: rake assets:precompile
       rake aborted!
       SyntaxError: /tmp/build_6b716718-99b6-478f-aba1-fb9b64309673/app/models/mandrill_delivery.rb:49: syntax error, unexpected ']', expecting '}'
       ],
       ^
       /tmp/build_6b716718-99b6-478f-aba1-fb9b64309673/app/models/mandrill_delivery.rb:51: syntax error, unexpected '}', expecting keyword_end
       /tmp/build_6b716718-99b6-478f-aba1-fb9b64309673/vendor/bundle/ruby/2.0.0/gems/activesupport-4.0.2/lib/active_support/dependencies.rb:229:in `require'
       /tmp/build_6b716718-99b6-478f-aba1-fb9b64309673/vendor/bundle/ruby/2.0.0/gems/activesupport-4.0.2/lib/active_support/dependencies.rb:229:in `block in require'
       /tmp/build_6b716718-99b6-478f-aba1-fb9b64309673/vendor/bundle/ruby/2.0.0/gems/activesupport-4.0.2/lib/active_support/dependencies.rb:214:in `load_dependency'
       /tmp/build_6b716718-99b6-478f-aba1-fb9b64309673/vendor/bundle/ruby/2.0.0/gems/activesupport-4.0.2/lib/active_support/dependencies.rb:229:in `require'
       /tmp/build_6b716718-99b6-478f-aba1-fb9b64309673/vendor/bundle/ruby/2.0.0/gems/activesupport-4.0.2/lib/active_support/dependencies.rb:330:in `require_or_load'
       /tmp/build_6b716718-99b6-478f-aba1-fb9b64309673/vendor/bundle/ruby/2.0.0/gems/activesupport-4.0.2/lib/active_support/dependencies.rb:463:in `load_missing_constant'
       /tmp/build_6b716718-99b6-478f-aba1-fb9b64309673/vendor/bundle/ruby/2.0.0/gems/activesupport-4.0.2/lib/active_support/dependencies.rb:184:in `const_missing'
       /tmp/build_6b716718-99b6-478f-aba1-fb9b64309673/config/initializers/mailer.rb:1:in `<top (required)>'
       /tmp/build_6b716718-99b6-478f-aba1-fb9b64309673/vendor/bundle/ruby/2.0.0/gems/activesupport-4.0.2/lib/active_support/dependencies.rb:223:in `load'
       /tmp/build_6b716718-99b6-478f-aba1-fb9b64309673/vendor/bundle/ruby/2.0.0/gems/activesupport-4.0.2/lib/active_support/dependencies.rb:223:in `block in load'
       /tmp/build_6b716718-99b6-478f-aba1-fb9b64309673/vendor/bundle/ruby/2.0.0/gems/activesupport-4.0.2/lib/active_support/dependencies.rb:214:in `load_dependency'
       /tmp/build_6b716718-99b6-478f-aba1-fb9b64309673/vendor/bundle/ruby/2.0.0/gems/activesupport-4.0.2/lib/active_support/dependencies.rb:223:in `load'
       /tmp/build_6b716718-99b6-478f-aba1-fb9b64309673/vendor/bundle/ruby/2.0.0/gems/railties-4.0.2/lib/rails/engine.rb:609:in `block (2 levels) in <class:Engine>'
       /tmp/build_6b716718-99b6-478f-aba1-fb9b64309673/vendor/bundle/ruby/2.0.0/gems/railties-4.0.2/lib/rails/engine.rb:608:in `each'
       /tmp/build_6b716718-99b6-478f-aba1-fb9b64309673/vendor/bundle/ruby/2.0.0/gems/railties-4.0.2/lib/rails/engine.rb:608:in `block in <class:Engine>'
       /tmp/build_6b716718-99b6-478f-aba1-fb9b64309673/vendor/bundle/ruby/2.0.0/gems/railties-4.0.2/lib/rails/initializable.rb:30:in `instance_exec'
       /tmp/build_6b716718-99b6-478f-aba1-fb9b64309673/vendor/bundle/ruby/2.0.0/gems/railties-4.0.2/lib/rails/initializable.rb:30:in `run'
       /tmp/build_6b716718-99b6-478f-aba1-fb9b64309673/vendor/bundle/ruby/2.0.0/gems/railties-4.0.2/lib/rails/initializable.rb:55:in `block in run_initializers'
       /tmp/build_6b716718-99b6-478f-aba1-fb9b64309673/vendor/bundle/ruby/2.0.0/gems/railties-4.0.2/lib/rails/initializable.rb:44:in `each'
       /tmp/build_6b716718-99b6-478f-aba1-fb9b64309673/vendor/bundle/ruby/2.0.0/gems/railties-4.0.2/lib/rails/initializable.rb:44:in `tsort_each_child'
       /tmp/build_6b716718-99b6-478f-aba1-fb9b64309673/vendor/bundle/ruby/2.0.0/gems/railties-4.0.2/lib/rails/initializable.rb:54:in `run_initializers'
       /tmp/build_6b716718-99b6-478f-aba1-fb9b64309673/vendor/bundle/ruby/2.0.0/gems/railties-4.0.2/lib/rails/application.rb:215:in `initialize!'
       /tmp/build_6b716718-99b6-478f-aba1-fb9b64309673/vendor/bundle/ruby/2.0.0/gems/railties-4.0.2/lib/rails/railtie/configurable.rb:30:in `method_missing'
       /tmp/build_6b716718-99b6-478f-aba1-fb9b64309673/config/environment.rb:5:in `<top (required)>'
       /tmp/build_6b716718-99b6-478f-aba1-fb9b64309673/vendor/bundle/ruby/2.0.0/gems/activesupport-4.0.2/lib/active_support/dependencies.rb:229:in `require'
       /tmp/build_6b716718-99b6-478f-aba1-fb9b64309673/vendor/bundle/ruby/2.0.0/gems/activesupport-4.0.2/lib/active_support/dependencies.rb:229:in `block in require'
       /tmp/build_6b716718-99b6-478f-aba1-fb9b64309673/vendor/bundle/ruby/2.0.0/gems/activesupport-4.0.2/lib/active_support/dependencies.rb:214:in `load_dependency'
       /tmp/build_6b716718-99b6-478f-aba1-fb9b64309673/vendor/bundle/ruby/2.0.0/gems/activesupport-4.0.2/lib/active_support/dependencies.rb:229:in `require'
       /tmp/build_6b716718-99b6-478f-aba1-fb9b64309673/vendor/bundle/ruby/2.0.0/gems/railties-4.0.2/lib/rails/application.rb:189:in `require_environment!'
       /tmp/build_6b716718-99b6-478f-aba1-fb9b64309673/vendor/bundle/ruby/2.0.0/gems/railties-4.0.2/lib/rails/application.rb:250:in `block in run_tasks_blocks'
       /tmp/build_6b716718-99b6-478f-aba1-fb9b64309673/vendor/bundle/ruby/2.0.0/gems/sprockets-rails-2.0.1/lib/sprockets/rails/task.rb:54:in `block (2 levels) in define'
       Tasks: TOP => environment
       (See full trace by running task with --trace)
 !
 !     Precompiling assets failed.
 !

 !     Push rejected, failed to compile Ruby app

To git@heroku.com:peaceful-forest-3344.git
 ! [remote rejected] master -> master (pre-receive hook declined)
error: failed to push some refs to 'git@heroku.com:peaceful-forest-3344.git'
